tests/ui/pattern/usefulness/tuple-struct-nonexhaustive.stderr
error[E0004]: non-exhaustive patterns: `Foo(_, _)` not covered
  --> $DIR/tuple-struct-nonexhaustive.rs:5:11
   |
LL |     match x {
   |           ^ pattern `Foo(_, _)` not covered
   |
note: `Foo` defined here
  --> $DIR/tuple-struct-nonexhaustive.rs:1:8
   |
LL | struct Foo(isize, isize);
   |        ^^^
   = note: the matched value is of type `Foo`
   = note: `isize` does not have a fixed maximum value, so a wildcard `_` is necessary to match exhaustively
   = help: add `#![feature(precise_pointer_size_matching)]` to the crate attributes to enable precise `isize` matching
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         Foo(2, b) => println!("{}", b),
LL +         Foo(_, _) => todo!()
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
